--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "rollup-plugin-typescript2": "^0.27.0",
     "terser": "^4.1.2",
     "ts-jest": "^26.1.0",
-    "typescript": "3.9.1-rc",
+    "typescript": "^3.9.3",
     "yarpm": "^0.2.1"
   },
   "dependencies": {},
